syntax = "proto3";
package pb;
option  go_package = "../pb";  // 声明生成的 go 文件所属的包

// 服务器类型
enum ServerType {
    NONE = 0;
    GATE = 1;  // 网关,转发服务
    GAME = 2;  // game
    MAX  = 3;  // 最大值
};

// 发送标志
enum SendType {
    PLAYER  = 0;  // 指定玩家
    NODE    = 1;  // 指定节点
    CLUSTER = 2;  // 集群所有节点
};

// 集群信息
message ServerNode {
    ServerType ServerType = 1;
    uint32     ServerID   = 2;
    string     Ip         = 3;
    int32      Port       = 4;
}

// 原始包
message Packet {
    PacketHead Head = 1;  // 包头
    bytes      Buff = 2;  // proto压缩数据
}

// 包头
message PacketHead {
    ServerType SrcServerType = 1;  // 源服务类型
    uint32     SrcServerID   = 2;  // 源集群id
    ServerType DstServerType = 3;  // 目标集群类型
    uint32     DstServerID   = 4;  // 目标集群id 大于0优先
    SendType   SendType      = 5;  // 发送类型
    int32      ApiCode       = 6;  // Api代码
    uint32     SeqID         = 7;  // 序列号
    int64      Time          = 8;  // 请求时间戳
    uint64     UID           = 9;  // 目标玩家uid
}

// 客户端包头
message RpcHead {
    int32  Code   = 1;  // 错误码 ErrorCode
    string ErrMsg = 2;  // 错误信息
}

// 服务之前调用包头（任意参数接口调用）
message ActorRequest {
    string ActorName = 1;
    string FuncName  = 2;
    bytes  Buff      = 3;
}

message ActorResponse {
    RpcHead Head = 1;
    bytes   Buff = 2;
}
